[project]
name = "claimguard"
version = "0.1.0"
description = ""
authors = [
    {name = "Rangel Sousa",email = "rangelgs17@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "twilio (>=9.6.2,<10.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
